--- a/public/guest/_droow/project-8.html
+++ b/public/guest/_droow/project-8.html
@@ -145,7 +145,7 @@
                 <div class="headefr-fexid" data-dsn-header="project">
                     <div class="bg has-top-bottom" id="dsn-hero-parallax-img">
                         <div class=" " data-dsn="video" data-overlay="4" data-dsn-ajax="img">
-                            <video class="image-bg cover-bg dsn-video" poster="http://dsngrid.com/" autoplay loop
+                            <video class="image-bg cover-bg dsn-video" poster="https://dsngrid.com/" autoplay loop
                                 muted>
                                 <source src="http://theme.dsngrid.com/video/droow.mp4" type="video/mp4"
                                     type="video/mp4">
